--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   },
   "author": "Jasmin Dervisi",
   "license": "ISC",
+  "engines": {
+    "node": "12.16.3"
+  },
   "dependencies": {
     "body-parser": "^1.19.0",
     "ejs": "^3.1.5",
